crates/kernel/tests/unit/snapshots/main__unit__transitions__nudge_volume_emits_only_the_system_volume.snap
---
source: crates/kernel/tests/unit/transitions.rs
assertion_line: 566
expression: effs
---
[
    System(
        Volume(
            Percent(
                55,
            ),
        ),
    ),
]
