crates/kernel/tests/unit/snapshots/main__unit__transitions__set_volume_emits_audio_and_system.snap
---
source: crates/kernel/tests/unit/transitions.rs
expression: effs
---
[
    Audio(
        Volume(
            Percent(
                55,
            ),
        ),
    ),
    System(
        Volume(
            Percent(
                55,
            ),
        ),
    ),
]
