crates/kernel/tests/unit/snapshots/main__unit__transitions__start_track_emits_nowplaying_and_playing_state.snap
---
source: crates/kernel/tests/unit/transitions.rs
assertion_line: 520
expression: effs
---
[
    Audio(
        Stop,
    ),
    Audio(
        Load(
            TrackLoad {
                path: "/tmp/track0.flac",
                gain: None,
                revision: Revision(
                    1,
                ),
            },
        ),
    ),
    Library(
        Disk(
            AppendHistory(
                HistoryEntry {
                    track: Local(
                        "/tmp/track0.flac",
                    ),
                    title: "Song",
                    artist: Some(
                        "Artist",
                    ),
                    at: Moment(
                        0ns,
                    ),
                },
            ),
        ),
    ),
    Macos(
        NowPlaying(
            Some(
                Track {
                    source: Local(
                        "/tmp/track0.flac",
                    ),
                    tags: Tags {
                        title: Some(
                            "Song",
                        ),
                        artist: Some(
                            "Artist",
                        ),
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "Artist — Song",
                    tagging: Read(
                        200s,
                    ),
                },
            ),
        ),
    ),
    Audio(
        SetPlayback(
            Playing,
        ),
    ),
    Macos(
        SetPlayback(
            Playing,
        ),
    ),
    Animate(
        TrackChanged,
    ),
    Animate(
        PlaybackChanged(
            Play,
        ),
    ),
]
