crates/kernel/tests/unit/snapshots/main__unit__transitions__track_ended_repeat_one_without_current_stops.snap
---
source: crates/kernel/tests/unit/transitions.rs
expression: effs
---
[
    Audio(
        Stop,
    ),
    Macos(
        PlaybackState(
            Paused,
        ),
    ),
    Macos(
        NowPlaying(
            None,
        ),
    ),
]
